<resources>
    <string name="app_name">My Application</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_home_second">Category %1$s</string>
    <string name="hello_dashboard_second">Hello DashboardSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello NotificationsSecondFragment. Arg: %1$s</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_languages">Languages</string>
    <string name="title_night_mode">Night mode</string>
    <string name="title_volume">Volume</string>
    <string name="title_disable_notifications">Disable notifications</string>
    <string name="title_enable_night_mode">Enable night mode</string>

    <string name="enable">You will receive all notifications</string>
    <string name="disable">You will no longer receive any notifications</string>
    <string name="languages">Languages (country/region)</string>

    <string name="ring">Ring</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>
    <string name="notifications_mode">Notifications mode</string>

    <string name="english">English</string>
    <string name="francais">Français</string>

    <string name="categorie">Category</string>

    <string name="batr_name">Batr Hamza</string>
    <string name="batr_description">In charge of Search package + Home package + Api stuff</string>
    <string name="roussy_name">Roussy Jeremy</string>
    <string name="roussy_description">In charge of Home category images + Settings + About</string>
    <string name="saubanere_name">Saubanere Théo</string>
    <string name="saubanere_description">In charge of Discover package + Api stuff</string>

    <string name="home_second">Movies</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_movie">Movie</string>
    <string name="movie_poster">Movie poster</string>
    <string name="previous_page">previous page</string>
    <string name="next_page">next page</string>

    <string name="page_number" translatable="false">1</string>
    <string name="youtube_api_key" translatable="false">AIzaSyCrvDEI6K0DmQOm0eOHhKbItRmxFWhmwmA</string>
    <string name="genres">Genres :</string>
    <string name="original_language">Original language :</string>
    <string name="production_companies">Production companies :</string>
    <string name="release_date">Release date :</string>
    <string name="video" translatable="false">Video</string>
    <string name="play" translatable="false">Play</string>
    <string name="search">Search</string>
    <string name="title_search">Search</string>
    <string name="total_results">"Total results : "</string>
    <string name="favorites">Favorites</string>

    <string name="title_discover">Discover</string>
    <string name="title_favorites">Favorites</string>
    <string name="icon_discover">Discover icon</string>
    <string name="genre_help">Choose a genre from the list</string>
    <string name="hint_discover">" Welcome in discover mode.\nYou can either find movies with a specific genre, or with someone acting/part of the crew member, or from a particular year, or all of these 3 filters.\nHave fun discovering ! "</string>
    <string name="year_help">Type a year</string>
    <string name="button_discover">Start discovering !</string>
    <string name="title_discover_second">Discover movies</string>
    <string name="actor_help">"Find an actor or a crew member"</string>
    <string name="none">None</string>
    <string name="actor_helper_text">You may need to press \"Next\" on your keyboard to see the list ;)</string>
</resources>