<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_language_24"
        app:title="@string/title_languages">

        <ListPreference
            app:defaultValue="@string/english"
            app:entries="@array/languages_entries"
            app:entryValues="@array/languages_values"
            app:key="languages"
            app:title="@string/languages"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_bedtime_24"
        app:title="@string/title_night_mode">

        <SwitchPreferenceCompat
            app:key="night_mode"
            app:title="@string/title_enable_night_mode" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_notifications_none_24"
        app:title="@string/title_notifications">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:summaryOff="@string/enable"
            app:summaryOn="@string/disable"
            app:title="@string/title_disable_notifications" />

        <ListPreference
            app:defaultValue="@string/ring"
            app:entries="@array/notifications_entries"
            app:entryValues="@array/notifications_values"
            app:key="notifications_mode"
            app:title="@string/notifications_mode"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:defaultValue="50"
            app:key="notifications_volume"
            app:showSeekBarValue="true"
            app:title="@string/title_volume" />

    </PreferenceCategory>

</PreferenceScreen>