<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_second"
        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">

        <argument
            android:name="myArg"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_home_second_to_movieFragment"
            app:destination="@id/navigation_movie" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.gmail.eamosse.imdb.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover">

        <action
            android:id="@+id/action_discover_to_discover_second"
            app:destination="@id/navigation_discover_second" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discover_second"
        android:name="com.gmail.eamosse.imdb.ui.discover.DiscoverSecondFragment"
        android:label="@string/title_discover_second"
        tools:layout="@layout/fragment_discover_second">

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.gmail.eamosse.imdb.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.gmail.eamosse.imdb.ui.home.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie">
        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.gmail.eamosse.imdb.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.gmail.eamosse.imdb.ui.about.AboutFragment"
        android:label="@string/title_about" />
</navigation>