<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.fragment.SearchFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_bar_lyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_search_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/search"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_movies_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/previous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:spanCount="4"
            tools:listitem="@layout/other_movies_list_item"
            app:layout_constraintTop_toBottomOf="@id/search_bar_lyt"/>

        <ImageButton
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_navigate_before_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular_movies_list"
            app:layout_constraintRight_toLeftOf="@id/page_number"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/previous_page"
            app:cornerRadius="50dp"
            />

        <TextView
            android:id="@+id/page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/page_number"
            />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/page_number"
            android:src="@drawable/ic_baseline_navigate_next_24"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/next_page" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>