<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment"
    android:paddingBottom="?attr/actionBarSize">

    <!-- A CardView that contains an ImageView and TextView-->
    <androidx.cardview.widget.CardView
        android:id="@+id/batr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_Batr"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_image_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_batr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/batr_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:text="@string/batr_name" />

                <TextView
                    android:id="@+id/text_about_Batr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/batr_description"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- A CardView that contains an ImageView and TextView-->
    <androidx.cardview.widget.CardView
        android:id="@+id/Saubanere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_Saubanere"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_image_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/saubanere_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/saubanere_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:text="@string/saubanere_name" />

                <TextView
                    android:id="@+id/text_about_Saubanere"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saubanere_description"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <!-- A CardView that contains an ImageView and TextView-->
    <androidx.cardview.widget.CardView
        android:id="@+id/Roussy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@id/Saubanere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/batr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_Roussy"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_image_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/name_roussy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/roussy_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    tools:text="@string/roussy_name" />

                <TextView
                    android:id="@+id/text_about_Roussy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/roussy_description"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>